--- a/index.html
+++ b/index.html
@@ -36,72 +36,72 @@
                 <button>Contact with us<span class="icon">&#9654;</span></button>
             </div>
         </div>
-    </header>
+    </header><!--end header-->
   <!-- main -->
   <main>
-      <section class="about">
+      <section class="about"><!--start about-->
           <div class="container">
               <img src="images/about-us.jpg" alt="about">
               <h2>About Us</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, earum ut. Nemo at itaque alias recusandae quibusdam dolorem beatae tenetur ducimus commodi quae? Dolorem ducimus assumenda non quo quos quod aperiam earum, excepturi esse amet nisi suscipit provident sapiente similique, praesentium impedit, minus eligendi culpa fuga dicta fugit odit? Fugit!</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed reprehenderit repellat corporis? Assumenda impedit sint voluptatum dicta, architecto maxime minus pariatur rerum veniam quod reiciendis harum voluptatibus tempora molestias fugit, ab consequuntur id vero nulla enim ipsa? Molestias nihil, nisi ratione quam odit vero excepturi, placeat error doloremque, hic repellendus.</p>
           </div>
-      </section>
-      <section class="sevices">
+      </section><!--end about-->
+      <section class="sevices"><!--start services-->
           <div class="container">
               <h2>Our Services</h2>
-              <div class="grid-container">
-                    <div class="digital">
+              <div class="grid-container"><!--start grid-container-->
+                    <div class="digital"><!--start digital-->
                         <img src="images/digital.jpg" alt="digital world">
                         <h3>Digital Transformation</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellendus assumenda, deleniti fugiat, sint mollitia architecto velit atque tempore id dolor nemo animi tenetur, aperiam dicta cupiditate natus dignissimos.
                         </p>
                         <button>Digital Plans<span class="icon">&#9654;</span></button>
-                      </div>
+                      </div><!--end digital-->
                       <br>
-                      <div class="marketing">
+                      <div class="marketing"><!--marketing-->
                         <img src="images/marketing.jpg" alt="marketing">
                         <h3>Marketing</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellendus assumenda, deleniti fugiat, sint mollitia architecto velit atque tempore id dolor nemo animi tenetur, aperiam dicta cupiditate natus dignissimos.
                         </p>
                         <button>Marketing Plans<span class="icon">&#9654;</span></button>
-                      </div>
+                      </div><!--end marketing-->
                       <br>
-                      <div class="production">
+                      <div class="production"><!--start production-->
                         <img src="images/video.jpg" alt="production">
                         <h3>Video Production</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellendus assumenda, deleniti fugiat, sint mollitia architecto velit atque tempore id dolor nemo animi tenetur, aperiam dicta cupiditate natus dignissimos.
                         </p>
                         <button>Vedio Plans<span class="icon">&#9654;</span></button>
-                      </div>
+                      </div><!--end production-->
                       <br>
-                      <div class="development">
+                      <div class="development"><!--development-->
                         <img src="images/web.jpg" alt="development">
                         <h3>Web Devlopment</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellendus assumenda, deleniti fugiat, sint mollitia architecto velit atque tempore id dolor nemo animi tenetur, aperiam dicta cupiditate natus dignissimos.
                         </p>
                         <button>Web Plans<span class="icon">&#9654;</span></button>
-                      </div>
+                      </div><!--development-->
                       <br>
-                      <div class="print">
+                      <div class="print"><!--start print-->
                         <img src="images/print.jpg" alt="print">
                         <h3>Print</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maxime repellendus assumenda, deleniti fugiat, sint mollitia architecto velit atque tempore id dolor nemo animi tenetur, aperiam dicta cupiditate natus dignissimos.
                         </p>
                         <button>Print Plans<span class="icon">&#9654;</span></button>
-                      </div>
-              </div>
-      </div>
-      </section>
+                      </div><!--end print-->
+              </div><!--end grid-container-->
+      </div> <!--end container-->
+      </section><!--end services-->
       <section>
-          <div class="container">
+          <div class="container"><!--start container-->
               <img src="images/vision.jpg" alt="vision">
               <h2>Our Vision</h2>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta aperiam, porro dignissimos tempore deleniti, perspiciatis rerum reiciendis veritatis non quasi culpa. Corrupti inventore sit consequuntur nihil ad suscipit, ea ipsum omnis amet neque harum! Ullam nam molestiae accusantium odio voluptate.</p>
               <button>Learn More<span class="icon">&#9654;</span></button>
-          </div>
+          </div><!--end container-->
       </section>
-      <section class="team">
+      <section class="team"><!--start team-->
           <div class="container">
               <h2>Our Team</h2>
               <div class="row">
@@ -126,8 +126,8 @@
                 </div>
             </div>
           </div>
-      </section>
-<section class="contact">
+      </section><!--end team-->
+<section class="contact"><!--start contact-->
     <div class="container">
 
         <h2>Contact</h2>
@@ -161,8 +161,9 @@
             <td>Closed</td>
         </tr>
     </table>
-</section>
+</section><!--end contact-->
   </main>
+  <!-- footer -->
   <footer>
       <p>&copy; Copyright Three Star Media,2020</p>
       <p>All images are taken from Unsplash</p>
